# umbi3-engine

./: .gitignore  CMakeLists.txt  MyLayer.h  main.cpp
dependencies/include/glad/: glad.h
dependencies/include/glm/: CMakeLists.txt
dependencies/include/glm/detail/: type_quat.hpp
dependencies/include/glm/gtx/: quaternion.hpp
dependencies/src/: glad.c
engine/: App.h  CMakeLists.txt  Resources.h  Window.h
engine/events/: Event.h  KeyPressedEvent.h  KeyReleasedEvent.h  MouseButtonPressedEvent.h  MouseButtonReleasedEvent.h  MouseMovedEvent.h  MouseScrolledEvent.h  WindowCloseEvent.h  WindowResizeEvent.h
engine/layers/: Layer.h  LayerStack.h
engine/mesh/: Mesh.h
engine/shaders/: Shader.h
platform/: CMakeLists.txt
platform/windows/: WindowsWindow.h
renderer/: CMakeLists.txt  Entity.h  Picture.h  Renderer.h
renderer/cameras/: Camera.h  FPSCamera.h
renderer/lights/: Attenuation.h  DirectionalLight.h  Light.h  PointLight.h
renderer/projections/: PerspectiveProjection.h  Projection.h
shaders/: fragment.glsl  vertex.glsl
utils/: CMakeLists.txt  Controller2D.h
